syntax = "proto3";

option go_package = "kloudlite.io/rpc/iam";

service IAM {
  // Query
  rpc Ping(Message) returns (Message);
  rpc Can(CanIn) returns (CanOut);
  rpc ListUserMemberships(UserMembershipsIn) returns (ListMembershipsOut);
  rpc GetMembership(GetMembershipIn) returns (GetMembershipOut);
  rpc ListResourceMemberships(ResourceMembershipsIn) returns (ListMembershipsOut);

  rpc ListMembershipsByResource(MembershipsByResourceIn) returns (ListMembershipsOut);
  rpc ListMembershipsForUser(MembershipsForUserIn) returns (ListMembershipsOut);

  // Mutation
  rpc AddMembership(AddMembershipIn) returns (AddMembershipOut);
  rpc InviteMembership(AddMembershipIn) returns (AddMembershipOut);
  rpc ConfirmMembership(ConfirmMembershipIn) returns (ConfirmMembershipOut);
  rpc RemoveMembership(RemoveMembershipIn) returns (RemoveMembershipOut);
  rpc RemoveResource(RemoveResourceIn) returns (RemoveResourceOut);
}

message ConfirmMembershipIn{
  string user_id = 1;
  string resource_ref = 2;
  string role = 3;
}

message ConfirmMembershipOut {
}

message RoleBinding {
  string userId = 1;
  string ResourceRef = 2;
  string resourceType = 3;
  string role = 4;
  bool accepted = 5;
}

message GetMembershipIn {
  string userId = 1;
  string resourceType = 2;
  string ResourceRef = 3;
  bool accepted = 5;
}

message AddMembershipIn {
  string userId = 1;
  string resourceType = 2;
  string resourceRef = 3;
  string role = 4;
  string filter = 5;
}

message GetMembershipOut {
  string userId=1;
  string ResourceRef=2;
  string role=3;
  bool accepted = 5;
}

message AddMembershipOut {
  bool result = 1;
}

message RemoveMembershipIn {
  string userId = 1;
  string ResourceRef = 2;
}

message RemoveMembershipOut {
  bool result = 1;
}

message RemoveResourceIn {
  string ResourceRef = 1;
}

message RemoveResourceOut {
  bool result = 1;
}

message ListMembershipsOut {
  repeated RoleBinding roleBindings = 1;
}

message UserMembershipsIn {
  string userId = 1;
  string resourceType = 2;
}

message ResourceMembershipsIn {
  string resourceType = 1;
  string ResourceRef = 2;
}

message MembershipsByResourceIn {
  string resourceType = 1;
  string resourceRef = 2;
  optional bool accepted = 3;
}

message MembershipsForUserIn {
  string userId = 1;
  string resourceType = 2;
}

message ResourceMembershipsOut {
  string resourceType = 1;
  string ResourceRef = 2;
}

message Message {
  string message = 1;
}

message CanIn {
  string userId = 1;
  repeated string ResourceRefs = 2;
  string action = 3;
}

message CanOut {
  bool status = 1;
}

